# sps_genai

./: README.md  pyproject.toml  train_cifar10.py
app/: gan_infer.py  gan_models.py  infer.py  main.py  train_gan.py
helper_lib/: __init__.py  data_loader.py  evaluator.py  generator.py  model.py  trainer.py
models/: cifar10_cnn.pt  gan_generator.pt
